--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Chủ nhà hàng nổi Elisa trên sông Sài Gòn bị ngân hàng xiết nợ",
+    "content": "Chủ nhà hàng nổi Elisa trên sông Sài Gòn, Công ty TNHH Thương mại Hào Huy, đang đối mặt với việc bị ngân hàng Agribank xiết nợ do khoản nợ gần 134 tỉ đồng. Tài sản đảm bảo cho khoản nợ này là tàu Elisa, nhà hàng nổi lớn nhất Việt Nam có sức chứa 1.000 khách. Đấu giá tài sản sẽ được tổ chức vào ngày 18-4 tới tại TP.HCM.",
+    "link": "https://tuoitre.vn/chu-nha-hang-noi-elisa-tren-song-sai-gon-bi-ngan-hang-xiet-no-20250326215833856.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao chủ nhà hàng Elisa bị ngân hàng xiết nợ?",
+    "answers": [
+      {
+        "text": "Do khoản nợ gần 134 tỉ đồng.",
+        "correct": true
+      },
+      {
+        "text": "Vì nhà hàng không đông khách.",
+        "correct": false
+      },
+      {
+        "text": "Do tàu Elisa bị hư hỏng.",
+        "correct": false
+      },
+      {
+        "text": "Vì công ty không có vốn hoạt động.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngân hàng UOB: Chính sách tiền tệ toàn cầu sẽ bị ảnh hưởng từ ông Trump",
     "content": "Ngân hàng UOB (Singapore) dự đoán rằng Cục Dự trữ Liên bang Mỹ (Fed) sẽ chỉ cắt giảm lãi suất một lần 0,25% trong quý 2 năm 2025, mặc dù thị trường kỳ vọng sẽ có nhiều lần cắt giảm hơn. Ông Abel Lim cho rằng chính sách tiền tệ toàn cầu sẽ bị ảnh hưởng bởi các quyết định của Tổng thống Donald Trump, đặc biệt là những tác động về lạm phát và thương mại. Ông Lê Thành Hưng cũng chỉ ra rằng kinh tế Việt Nam sẽ tiếp tục tăng trưởng nhờ vào đầu tư công, nhưng cũng có những lo ngại về thuế quan từ Mỹ có thể ảnh hưởng đến xuất khẩu của Việt Nam.",
     "link": "https://tuoitre.vn/ngan-hang-uob-chinh-sach-tien-te-toan-cau-se-bi-anh-huong-tu-ong-trump-20250326212511733.htm",
@@ -1078,33 +1105,6 @@
     ]
   },
   {
-    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
-    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
-    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
-    "answers": [
-      {
-        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
-        "correct": true
-      },
-      {
-        "text": "Neymar không cần thiết cho đội tuyển.",
-        "correct": false
-      },
-      {
-        "text": "Melo không quan tâm đến Neymar.",
-        "correct": false
-      },
-      {
-        "text": "Brazil không cần thay đổi gì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
     "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
     "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
@@ -1127,6 +1127,33 @@
       },
       {
         "text": "Không cần thư giãn trước khi ngủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
+    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
+    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
+    "answers": [
+      {
+        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
+        "correct": true
+      },
+      {
+        "text": "Neymar không cần thiết cho đội tuyển.",
+        "correct": false
+      },
+      {
+        "text": "Melo không quan tâm đến Neymar.",
+        "correct": false
+      },
+      {
+        "text": "Brazil không cần thay đổi gì.",
         "correct": false
       }
     ]
@@ -2148,33 +2175,6 @@
     ]
   },
   {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -2201,6 +2201,33 @@
       },
       {
         "text": "Herbicide D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
@@ -4386,37 +4413,6 @@
     ]
   },
   {
-    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
-    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
-    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
-    "answers": [
-      {
-        "text": "Đột tử",
-        "correct": true
-      },
-      {
-        "text": "Ngất xỉu",
-        "correct": false
-      },
-      {
-        "text": "Đau ngực",
-        "correct": false
-      },
-      {
-        "text": "Rối loạn tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tiểu đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -4443,6 +4439,37 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
+    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
+    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
+    "answers": [
+      {
+        "text": "Đột tử",
+        "correct": true
+      },
+      {
+        "text": "Ngất xỉu",
+        "correct": false
+      },
+      {
+        "text": "Đau ngực",
+        "correct": false
+      },
+      {
+        "text": "Rối loạn tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường",
         "correct": false
       }
     ]
@@ -4734,6 +4761,33 @@
     ]
   },
   {
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "answers": [
+      {
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "correct": true
+      },
+      {
+        "text": "Thiết kế một chiếc xe máy mới",
+        "correct": false
+      },
+      {
+        "text": "Thuê xe đón dâu từ ngoài",
+        "correct": false
+      },
+      {
+        "text": "Mua một chiếc xe mới hoàn toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
     "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
     "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
@@ -4783,33 +4837,6 @@
       },
       {
         "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
-    "answers": [
-      {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
-        "correct": true
-      },
-      {
-        "text": "Thiết kế một chiếc xe máy mới",
-        "correct": false
-      },
-      {
-        "text": "Thuê xe đón dâu từ ngoài",
-        "correct": false
-      },
-      {
-        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
@@ -5262,33 +5289,6 @@
       },
       {
         "text": "Huyện Phù Yên và huyện Tân Lạc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cảnh sát làm việc với người đàn ông để bé gái cầm vô lăng lái ô tô",
-    "content": "Cảnh sát đã tiến hành làm việc với một người đàn ông tên N. vì đã để bé gái 8 tuổi cầm vô lăng điều khiển ô tô trong khi anh ta ngồi ở ghế lái. Sự việc được ghi lại trong một đoạn video và xảy ra trên Đường 100 thuộc huyện Bình Xuyên, tỉnh Vĩnh Phúc. Theo đánh giá của cơ quan chức năng, hành động này là cực kỳ nguy hiểm và vi phạm luật giao thông, với mức phạt có thể lên tới 30 triệu đồng.",
-    "link": "https://tuoitre.vn/canh-sat-lam-viec-voi-nguoi-dan-ong-de-be-gai-cam-vo-lang-lai-o-to-20250325220607618.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao cảnh sát làm việc với người đàn ông để bé gái lái ô tô?",
-    "answers": [
-      {
-        "text": "Vì hành động của anh ta gây nguy hiểm cho bé gái và người khác.",
-        "correct": true
-      },
-      {
-        "text": "Anh ta muốn bé gái học lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Cảnh sát muốn khuyến khích trẻ em tham gia giao thông.",
-        "correct": false
-      },
-      {
-        "text": "Không có lý do nào cả.",
         "correct": false
       }
     ]
