--- a/home.html
+++ b/home.html
@@ -179,6 +179,33 @@
     ]
   },
   {
+    "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
+    "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
+    "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Yamaha YZF-R9 được giới thiệu ở đâu và vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Triển lãm Bangkok Motor Show 2025",
+        "correct": true
+      },
+      {
+        "text": "Triển lãm Tokyo Motor Show 2025",
+        "correct": false
+      },
+      {
+        "text": "Triển lãm xe máy Milan 2025",
+        "correct": false
+      },
+      {
+        "text": "Triển lãm xe hơi Frankfurt 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhà vô địch Club World Cup được thưởng 125 triệu USD",
     "content": "FIFA đã công bố phiên bản mới của Club World Cup vào hè 2025 với quỹ tiền thưởng lên tới 1 tỷ USD, trong đó nhà vô địch sẽ nhận được 125 triệu USD. Số tiền này bao gồm 525 triệu USD đảm bảo cho các đội tham gia, với khoản tiền thưởng cho các đội từ nhiều khu vực khác nhau. Giải đấu sẽ có 32 đội tham gia, diễn ra từ 15/6 đến 13/7/2025 tại Mỹ, với thể thức giống như FIFA World Cup.",
     "link": "https://vnexpress.net/nha-vo-dich-club-world-cup-duoc-thuong-125-trieu-usd-4866343.html",
@@ -1203,33 +1230,6 @@
     ]
   },
   {
-    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
-    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
-    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
-    "answers": [
-      {
-        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
-        "correct": true
-      },
-      {
-        "text": "Neymar không cần thiết cho đội tuyển.",
-        "correct": false
-      },
-      {
-        "text": "Melo không quan tâm đến Neymar.",
-        "correct": false
-      },
-      {
-        "text": "Brazil không cần thay đổi gì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
     "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
     "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
@@ -1252,6 +1252,33 @@
       },
       {
         "text": "Không cần thư giãn trước khi ngủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
+    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
+    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
+    "answers": [
+      {
+        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
+        "correct": true
+      },
+      {
+        "text": "Neymar không cần thiết cho đội tuyển.",
+        "correct": false
+      },
+      {
+        "text": "Melo không quan tâm đến Neymar.",
+        "correct": false
+      },
+      {
+        "text": "Brazil không cần thay đổi gì.",
         "correct": false
       }
     ]
@@ -1373,6 +1400,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -1399,33 +1453,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -1798,33 +1825,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
-    "answers": [
-      {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêm corticoid trị sẹo lồi",
     "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
     "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
@@ -1847,6 +1847,33 @@
       },
       {
         "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "answers": [
+      {
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -3815,32 +3842,28 @@
     ]
   },
   {
-    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
-    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
-    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
     "answers": [
       {
-        "text": "60 kg",
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
         "correct": true
       },
       {
-        "text": "50 kg",
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
         "correct": false
       },
       {
-        "text": "70 kg",
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
         "correct": false
       },
       {
-        "text": "40 kg",
-        "correct": false
-      },
-      {
-        "text": "80 kg",
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -3873,28 +3896,32 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
+    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
+    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
     "answers": [
       {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "text": "60 kg",
         "correct": true
       },
       {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "text": "50 kg",
         "correct": false
       },
       {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "text": "70 kg",
         "correct": false
       },
       {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
+        "text": "40 kg",
+        "correct": false
+      },
+      {
+        "text": "80 kg",
         "correct": false
       }
     ]
@@ -4020,6 +4047,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -4046,33 +4100,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
